--- a/database_views/reeem_jupyter/reeem_db_plot_OSeMBE.ipynb
+++ b/database_views/reeem_jupyter/reeem_db_plot_OSeMBE.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 342,
    "metadata": {},
    "outputs": [
     {
@@ -47911,6 +47911,87 @@
     "    htmlname = 'data/{}.html'.format(*info_dict_7['Region'])\n",
     "    pltly.plot(exfig, filename=htmlname)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generation in 2015 and 2016"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 334,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "year                            2015        2016\n",
+      "indicator                                       \n",
+      "Biofuel liquid              0.000000    0.000000\n",
+      "Biomass solid              32.789272   32.789682\n",
+      "Coal                      228.208352  217.421072\n",
+      "Geothermal                  0.000000    0.000000\n",
+      "Hydro                      19.971036   19.878926\n",
+      "Natural gas / non renew.  359.020000  361.429530\n",
+      "Nuclear                   281.962115  281.962115\n",
+      "Ocean                       0.019237    0.019814\n",
+      "Oil                         0.000000    0.000000\n",
+      "Solar                      31.112412   31.112412\n",
+      "Waste non renewable        25.663011   26.395727\n",
+      "Wind                      124.306092  141.161692\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_6_hist = df_6[df_6['year'].isin([2015, 2016])]\n",
+    "firsttwoyearGenDic = {}\n",
+    "for region in regions:\n",
+    "    df = pd.DataFrame()\n",
+    "    df = df_6_hist[df_6_hist['region']==region]\n",
+    "    firsttwoyearGenDic[region] = df.pivot(index='indicator', columns='year', values='value')\n",
+    "print(firsttwoyearGenDic['UK'])\n",
+    "\n",
+    "#df_7p = df_7_reg.pivot(index='year', columns='indicator',  values='value')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 345,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'xlsxwriter'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-345-4ed7b7dd7dac>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mxlsxwriter\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mwriter\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mExcelWriter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'OSeMBE_IEA_comparison.xlsx'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mengine\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'xlsxwriter'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mcol_headers\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Fuel'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'2015'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'2016'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mc\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mregions\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'xlsxwriter'"
+     ]
+    }
+   ],
+   "source": [
+    "writer = pd.ExcelWriter('OSeMBE_IEA_comparison.xlsx', engine='xlsxwriter')\n",
+    "col_headers = pd.DataFrame(['Fuel', '2015', '2016'])\n",
+    "\n",
+    "for c in regions:\n",
+    "    firsttwoyearGenDic[c].to_excel(writer, sheet_name=c, startrow=2,header=False,index=True)\n",
+    "    worksheet = writer.sheets[c]\n",
+    "    col_headers.to_excel(writer, sheet_name=c, header=False, index=False)\n",
+    "    \n",
+    "writer.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
