--- a/database_views/reeem_jupyter/reeem_db_plot_OSeMBE.ipynb
+++ b/database_views/reeem_jupyter/reeem_db_plot_OSeMBE.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -101,14 +101,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Nobackup\\haukeh\\programs\\anaconda3\\envs\\reeem\\lib\\site-packages\\ipykernel_launcher.py:12: UserWarning:\n",
+      "/anaconda/lib/python3.6/site-packages/ipykernel_launcher.py:12: UserWarning:\n",
       "\n",
       "The `stream` parameter of `getpass.getpass` will have no effect when using ipykernel\n",
       "\n"
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -47987,11 +47987,310 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# View 8: Fuel consumption graphs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Database query"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     pathway version    region  year  \\\n",
+      "0     C0T0E0  DataV1        ES  2015   \n",
+      "1     C0T0E0  DataV1        AT  2015   \n",
+      "2     C0T0E0  DataV1        DE  2015   \n",
+      "3     C0T0E0  DataV1        FR  2015   \n",
+      "4     C0T0E0  DataV1        PT  2015   \n",
+      "5     C0T0E0  DataV1        HU  2015   \n",
+      "6     C0T0E0  DataV1        CZ  2015   \n",
+      "7     C0T0E0  DataV1        SK  2015   \n",
+      "8     C0T0E0  DataV1        GR  2015   \n",
+      "9     C0T0E0  DataV1        CZ  2015   \n",
+      "10    C0T0E0  DataV1        RO  2015   \n",
+      "11    C0T0E0  DataV1        UK  2015   \n",
+      "12    C0T0E0  DataV1        HU  2015   \n",
+      "13    C0T0E0  DataV1        GR  2015   \n",
+      "14    C0T0E0  DataV1        CZ  2015   \n",
+      "15    C0T0E0  DataV1        SK  2015   \n",
+      "16    C0T0E0  DataV1        UK  2015   \n",
+      "17    C0T0E0  DataV1        FR  2015   \n",
+      "18    C0T0E0  DataV1        DE  2015   \n",
+      "19    C0T0E0  DataV1        HU  2015   \n",
+      "20    C0T0E0  DataV1        PL  2015   \n",
+      "21    C0T0E0  DataV1        DE  2015   \n",
+      "22    C0T0E0  DataV1        FR  2015   \n",
+      "23    C0T0E0  DataV1        HR  2015   \n",
+      "24    C0T0E0  DataV1        AT  2015   \n",
+      "25    C0T0E0  DataV1        FR  2015   \n",
+      "26    C0T0E0  DataV1        DE  2015   \n",
+      "27    C0T0E0  DataV1        SK  2015   \n",
+      "28    C0T0E0  DataV1        FR  2015   \n",
+      "29    C0T0E0  DataV1        LT  2015   \n",
+      "...      ...     ...       ...   ...   \n",
+      "6666  C0T0E0  DataV1        UK  2050   \n",
+      "6667  C0T0E0  DataV1        HU  2050   \n",
+      "6668  C0T0E0  DataV1        IT  2050   \n",
+      "6669  C0T0E0  DataV1        DE  2050   \n",
+      "6670  C0T0E0  DataV1        FR  2050   \n",
+      "6671  C0T0E0  DataV1        NO  2050   \n",
+      "6672  C0T0E0  DataV1        RO  2050   \n",
+      "6673  C0T0E0  DataV1        HR  2050   \n",
+      "6674  C0T0E0  DataV1        BG  2050   \n",
+      "6675  C0T0E0  DataV1        CY  2050   \n",
+      "6676  C0T0E0  DataV1        RO  2050   \n",
+      "6677  C0T0E0  DataV1        PT  2050   \n",
+      "6678  C0T0E0  DataV1  EU+CH+NO  2050   \n",
+      "6679  C0T0E0  DataV1        GR  2050   \n",
+      "6680  C0T0E0  DataV1        BE  2050   \n",
+      "6681  C0T0E0  DataV1        MT  2050   \n",
+      "6682  C0T0E0  DataV1        PT  2050   \n",
+      "6683  C0T0E0  DataV1        SK  2050   \n",
+      "6684  C0T0E0  DataV1        PL  2050   \n",
+      "6685  C0T0E0  DataV1        EE  2050   \n",
+      "6686  C0T0E0  DataV1        CH  2050   \n",
+      "6687  C0T0E0  DataV1        DE  2050   \n",
+      "6688  C0T0E0  DataV1        FR  2050   \n",
+      "6689  C0T0E0  DataV1        PL  2050   \n",
+      "6690  C0T0E0  DataV1        CY  2050   \n",
+      "6691  C0T0E0  DataV1        BG  2050   \n",
+      "6692  C0T0E0  DataV1  EU+CH+NO  2050   \n",
+      "6693  C0T0E0  DataV1        NL  2050   \n",
+      "6694  C0T0E0  DataV1        LV  2050   \n",
+      "6695  C0T0E0  DataV1        FI  2050   \n",
+      "\n",
+      "                                      category     indicator        value unit  \n",
+      "0     Primary energy consumption of renewables          Wind   186.019524   PJ  \n",
+      "1     Primary energy consumption of renewables  Hydro, Ocean   147.668436   PJ  \n",
+      "2     Primary energy consumption of renewables       Biofuel     0.000000   PJ  \n",
+      "3     Primary energy consumption of renewables  Hydro, Ocean   229.269168   PJ  \n",
+      "4     Primary energy consumption of renewables          Wind    42.035472   PJ  \n",
+      "5     Primary energy consumption of renewables       Biomass     4.257360   PJ  \n",
+      "6     Primary energy consumption of renewables    Geothermal     0.000000   PJ  \n",
+      "7     Primary energy consumption of renewables    Geothermal     0.000000   PJ  \n",
+      "8     Primary energy consumption of renewables         Solar    13.387419   PJ  \n",
+      "9     Primary energy consumption of renewables       Biomass     0.263956   PJ  \n",
+      "10    Primary energy consumption of renewables  Hydro, Ocean    58.029048   PJ  \n",
+      "11    Primary energy consumption of renewables         Solar    31.112412   PJ  \n",
+      "12    Primary energy consumption of renewables    Geothermal     0.000000   PJ  \n",
+      "13    Primary energy consumption of renewables  Hydro, Ocean    21.185208   PJ  \n",
+      "14    Primary energy consumption of renewables       Biofuel     0.000000   PJ  \n",
+      "15    Primary energy consumption of renewables       Biomass     1.390454   PJ  \n",
+      "16    Primary energy consumption of renewables       Biomass   126.498286   PJ  \n",
+      "17    Primary energy consumption of renewables       Biofuel     0.000000   PJ  \n",
+      "18    Primary energy consumption of renewables  Hydro, Ocean    80.595900   PJ  \n",
+      "19    Primary energy consumption of renewables          Wind     2.093400   PJ  \n",
+      "20    Primary energy consumption of renewables          Wind    51.656551   PJ  \n",
+      "21    Primary energy consumption of renewables       Biomass    19.264881   PJ  \n",
+      "22    Primary energy consumption of renewables         Solar    29.835738   PJ  \n",
+      "23    Primary energy consumption of renewables       Biomass     0.102177   PJ  \n",
+      "24    Primary energy consumption of renewables         Solar     3.135600   PJ  \n",
+      "25    Primary energy consumption of renewables       Biomass     0.000000   PJ  \n",
+      "26    Primary energy consumption of renewables         Solar   156.799220   PJ  \n",
+      "27    Primary energy consumption of renewables       Biofuel     0.000000   PJ  \n",
+      "28    Primary energy consumption of renewables    Geothermal     0.240325   PJ  \n",
+      "29    Primary energy consumption of renewables    Geothermal     0.000000   PJ  \n",
+      "...                                        ...           ...          ...  ...  \n",
+      "6666  Primary energy consumption of renewables       Biofuel     0.000000   PJ  \n",
+      "6667  Primary energy consumption of renewables    Geothermal    78.753457   PJ  \n",
+      "6668  Primary energy consumption of renewables          Wind   180.246898   PJ  \n",
+      "6669  Primary energy consumption of renewables  Hydro, Ocean   110.405916   PJ  \n",
+      "6670  Primary energy consumption of renewables          Wind   616.799376   PJ  \n",
+      "6671  Primary energy consumption of renewables       Biofuel     0.000000   PJ  \n",
+      "6672  Primary energy consumption of renewables       Biomass   206.384040   PJ  \n",
+      "6673  Primary energy consumption of renewables    Geothermal     0.522931   PJ  \n",
+      "6674  Primary energy consumption of renewables    Geothermal     1.934846   PJ  \n",
+      "6675  Primary energy consumption of renewables    Geothermal     0.627518   PJ  \n",
+      "6676  Primary energy consumption of renewables          Wind     0.000000   PJ  \n",
+      "6677  Primary energy consumption of renewables       Biomass    63.410556   PJ  \n",
+      "6678  Primary energy consumption of renewables    Geothermal  1043.404863   PJ  \n",
+      "6679  Primary energy consumption of renewables       Biofuel     0.000000   PJ  \n",
+      "6680  Primary energy consumption of renewables    Geothermal     2.457777   PJ  \n",
+      "6681  Primary energy consumption of renewables         Solar     0.000000   PJ  \n",
+      "6682  Primary energy consumption of renewables  Hydro, Ocean    67.954436   PJ  \n",
+      "6683  Primary energy consumption of renewables         Solar     0.000000   PJ  \n",
+      "6684  Primary energy consumption of renewables    Geothermal   154.160153   PJ  \n",
+      "6685  Primary energy consumption of renewables       Biomass    57.389565   PJ  \n",
+      "6686  Primary energy consumption of renewables  Hydro, Ocean   153.000000   PJ  \n",
+      "6687  Primary energy consumption of renewables         Solar    87.325616   PJ  \n",
+      "6688  Primary energy consumption of renewables         Solar     0.000000   PJ  \n",
+      "6689  Primary energy consumption of renewables  Hydro, Ocean    15.867972   PJ  \n",
+      "6690  Primary energy consumption of renewables          Wind     0.000000   PJ  \n",
+      "6691  Primary energy consumption of renewables         Solar    30.940452   PJ  \n",
+      "6692  Primary energy consumption of renewables  Hydro, Ocean  1789.281756   PJ  \n",
+      "6693  Primary energy consumption of renewables    Geothermal     5.072434   PJ  \n",
+      "6694  Primary energy consumption of renewables  Hydro, Ocean    11.967150   PJ  \n",
+      "6695  Primary energy consumption of renewables  Hydro, Ocean    58.539838   PJ  \n",
+      "\n",
+      "[6696 rows x 8 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Database select (SQL)\n",
+    "sql = text(\"\"\"\n",
+    "    SELECT  pathway, version, region, year, category, indicator, value, unit  -- column\n",
+    "    FROM    {0}.{1}                               -- table\n",
+    "    WHERE   pathway = 'C0T0E0'\n",
+    "        AND category = 'Primary energy consumption of renewables'\n",
+    "        AND (indicator = 'Hydro, Ocean'\n",
+    "            OR indicator = 'Solar'\n",
+    "            OR indicator = 'Wind'\n",
+    "            OR indicator = 'Geothermal'\n",
+    "            OR indicator = 'Biomass'\n",
+    "            OR indicator = 'Biofuel')\n",
+    "        --AND framework = 'FrameworkV1'              \n",
+    "        AND version = 'DataV1'                    -- filter 3\n",
+    "    ORDER BY pathway, version, year;              -- sorting \"\"\".format(schema, table_out))\n",
+    "df_8 = pd.read_sql_query(sql, con)\n",
+    "print(df_8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ES' 'AT' 'DE' 'FR' 'PT' 'HU' 'CZ' 'SK' 'GR' 'RO' 'UK' 'PL' 'HR' 'LT' 'LU'\n",
+      " 'EU+CH+NO' 'SE' 'NO' 'BE' 'IT' 'EE' 'NL' 'IE' 'DK' 'FI' 'BG' 'SI' 'MT'\n",
+      " 'CH' 'LV' 'CY']\n"
+     ]
+    }
+   ],
+   "source": [
+    "regions = df_8['region'].unique()\n",
+    "print(regions)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## For loop to generate RE consumption plot for each country"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "for r in regions:\n",
+    "    df_8_reg = df_8[df_8['region']==r]\n",
+    "    #print(df_8_reg)\n",
+    "    df_8p = df_8_reg.pivot(index='year', columns='indicator',  values='value')\n",
+    "    #print(df_8p)\n",
+    "\n",
+    "    # Facts dict\n",
+    "    info_dict_8 = {}\n",
+    "    info_dict_8['Filename'] = ['{}_reeem_plot_8' .format(pd.to_datetime('today').strftime(\"%Y-%m-%d\"))]\n",
+    "    #info_dict_6['Category'] = df_2.loc[:,'category'].unique()\n",
+    "    #info_dict_6['Indicator'] = df_2.loc[:,'indicator'].unique()\n",
+    "    info_dict_8['Unit'] = df_8.loc[:,'unit'].unique()\n",
+    "    info_dict_8['Pathway'] = df_8.loc[:,'pathway'].unique()\n",
+    "    info_dict_8['Year'] = df_8.loc[:,'year'].unique().tolist()\n",
+    "    info_dict_8['Region'] = df_8_reg.loc[:,'region'].unique()\n",
+    "    info_dict_8['Y-Axis'] = ['{}'.format(*info_dict_8['Unit'])]\n",
+    "    \n",
+    "    ## Create dictionaries for graph\n",
+    "\n",
+    "    x = df_8['year'].unique()\n",
+    "\n",
+    "    biomass = dict(\n",
+    "        x=x,\n",
+    "        y=df_8p.loc[:,'Biomass'],\n",
+    "        hoverinfo='x+y',\n",
+    "        mode='lines',\n",
+    "        line=dict(width=0.5,\n",
+    "                 color='rgb(172, 199, 119)'),\n",
+    "        stackgroup='one',\n",
+    "        name = 'Biomass'\n",
+    "    )\n",
+    "    biofuel = dict(\n",
+    "        x=x,\n",
+    "        y=df_8p.loc[:,'Biofuel'],\n",
+    "        hoverinfo='x+y',\n",
+    "        mode='lines',\n",
+    "        line=dict(width=0.5,\n",
+    "                 color='rgb(79, 98, 40)'),\n",
+    "        stackgroup='one',\n",
+    "        name = 'Biofuel'\n",
+    "    )\n",
+    "    hydro = dict(\n",
+    "        x=x,\n",
+    "        y=df_8p.loc[:,'Hydro, Ocean'],\n",
+    "        hoverinfo='x+y',\n",
+    "        mode='lines',\n",
+    "        line=dict(width=0.5,\n",
+    "                 color='rgb(0, 139, 188)'),\n",
+    "        stackgroup='one',\n",
+    "        name = 'Hydro'\n",
+    "    )\n",
+    "    wind = dict(\n",
+    "        x=x,\n",
+    "        y=df_8p.loc[:,'Wind'],\n",
+    "        hoverinfo='x+y',\n",
+    "        mode='lines',\n",
+    "        line=dict(width=0.5,\n",
+    "                 color='rgb(143, 119, 173)'),\n",
+    "        stackgroup='one',\n",
+    "        name = 'Wind'\n",
+    "    )\n",
+    "    solar = dict(\n",
+    "        x=x,\n",
+    "        y=df_8p.loc[:,'Solar'],\n",
+    "        hoverinfo='x+y',\n",
+    "        mode='lines',\n",
+    "        line=dict(width=0.5,\n",
+    "                 color='rgb(230, 175, 0)'),\n",
+    "        stackgroup='one',\n",
+    "        name = 'Solar'\n",
+    "    )\n",
+    "    geo = dict(\n",
+    "        x=x,\n",
+    "        y=df_8p.loc[:,'Geothermal'],\n",
+    "        hoverinfo='x+y',\n",
+    "        mode='lines',\n",
+    "        line=dict(width=0.5,\n",
+    "                 color='rgb(192, 80, 77)'),\n",
+    "        stackgroup='one',\n",
+    "        name = 'Geothermal'\n",
+    "    )\n",
+    "    # Set layout\n",
+    "    layout_consumption = go.Layout(\n",
+    "        #height=1000, width = 10000,\n",
+    "        #title='CO2-Emissions in EU28',\n",
+    "        title='Primary energy consumption of RE in {}'.format(*info_dict_8['Region']),\n",
+    "        # yaxis=dict(title='CO2-Emissions in Mt') )\n",
+    "        yaxis=dict(title=''.join(info_dict_8['Y-Axis'])) )\n",
+    "\n",
+    "    data = [biomass, biofuel, hydro, wind, solar, geo]\n",
+    "\n",
+    "    fig = go.Figure(data=data, layout=layout_consumption)\n",
+    "    #pltly.iplot(fig)\n",
+    "\n",
+    "    htmlname = 'data/REconsumption/{}.html' .format(*info_dict_8['Region'])\n",
+    "    pltly.plot(fig, filename=htmlname)"
+   ]
   }
  ],
  "metadata": {
@@ -48010,7 +48309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
